2008-09-14  Benjamin Mack  <benni@typo3.org>

	* Updated NEWS.txt for #9167
	* Followup to #9167: Mark extension as write protected: Option now called "excludeFromUpdates"
	* Fixed Bug #8621: Whitespace and CGL cleanup for class.tx_opendocs.php (Thanks to Stefano Kowalke)
	* Fixed Bug #847: error in tslib_fe->getFromCache() (Thanks to Susanne Moog)

2008-09-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9308: htmlArea RTE: link on colour name doesn't set colour

2008-09-14  Jeff Segars  <jeff@webempoweredchurch.org>

	* Added feature #3687: Disable "versioning" and "moreoptions"-menuitem via contextMenu.[key].disableItems in User TSconfig (thanks to Susanne Moog)
	* Fixed bug #9172: Wrong display of deleted owners and groups in Web->Access->Permissions (thanks to Johannes Pieper)
	* Added feature #7537: Wizard RTE has no docheader and is not according to new BE user interface (thanks to Patrick Broens and Christian Kuhn)

2008-09-14  Dmitry Dulepov  <dmitry@typo3.org>

	* Reverted change from 12.09.2008 (bug #8985). I mistakenly assumed that another core developer gave +1 to it. I had two non-core +1s only.
	* Fixed bug #9313: Introduce HTTP_STATUS-Constants (thanks to Steffen Kamper)
	* Re-committed bugfix #8985 (Enable USER object to become USER_INT on the fly) because of +1 from Stanislas

2008-09-13  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9277: Incorrect size of htmlArea RTE dialogue windows in Google Chrome browser
	* Fixed bug #9338: htmlArea RTE: incorrect opening size of some dialogue windows
	* Fixed bug #9339: htmlArea RTE: Enable resizing of acronym dialogue window in IE
	* Added feature #9340: htmlArea RTE: Configuration options for size and position of dialogue windows
	* Fixed bug #9341: htmlArea RTE: unable to disable the acronym element from the acronym feature

2008-09-13  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9318: Enhance and fix tslib_eidtools

2008-09-12  Dmitry Dulepov  <dmitry@typo3.org>
