@@ -200,6 +200,7 @@ body#typo3-pagetree,
 body#typo3-db-new-php,
 body#typo3-move-el-php,
 body#typo3-show-rechis-php,
+body#typo3-wizard-forms-php,
 body#ext-cms-layout-db-layout-php,
 body#ext-tstemplate-ts-index-php,
 body#ext-version-cm1-index-php,
